--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,5 @@
 html, body {
-	margin: 0px; min-height: 100%;
+	margin: 0px; height: 100%;
 }
 
 #site-nav-bar {
@@ -22,4 +22,18 @@ html, body {
 a {
   text-decoration: none;
   font-weight: bold;
+}
+
+.extra_contents {
+	min-height: 100%;
+	margin:0px;
+}
+
+.footer-block {
+	background-color: rgba(0,0,0,0.9);
+	color: white;
+	width: 100%; display: block;
+	text-align: center;
+	margin:0px;
+	height: 100px;
 }
