--- a/templates/base.html
+++ b/templates/base.html
@@ -14,76 +14,76 @@
 </head>
 <body>
 
-	<div id="site-nav-bar">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="extra_contents">
+    	<div id="site-nav-bar">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 
-            <a class="navbar-brand" href="/" id="sakkhat-brand-link">
-                <img src="{% static 'res/sakkhat_black.png' %}">
-            </a>
+                <a class="navbar-brand" href="/" id="sakkhat-brand-link">
+                    <img src="{% static 'res/sakkhat_black.png' %}">
+                </a>
 
-          
-            <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse" 
-                data-target="#navb" aria-expanded="false">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-         
+              
+                <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse" 
+                    data-target="#navb" aria-expanded="false">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+             
 
-            <div class="collapse navbar-collapse" id="navb">
-                <form class="form-inline my-2 my-lg-0 mr-auto">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-secondary my-2 my-sm-0" type="button">Search</button>
-                </form>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/#trending">Trending <i class="fa fa-line-chart"></i></a>
-                    </li>
-                    {% if not request.user.is_authenticated %}
+                <div class="collapse navbar-collapse" id="navb">
+                    <form class="form-inline my-2 my-lg-0 mr-auto">
+                        <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                        <button class="btn btn-secondary my-2 my-sm-0" type="button">Search</button>
+                    </form>
+                    <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/account/signin/">Sign In</a>
+                            <a class="nav-link" href="/#trending">Trending <i class="fa fa-line-chart"></i></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/account/signup/">Sign Up</a>
-                        </li>
-                    {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="/notification/">Notification
-                                {% if request.user.has_notification %}
-                                    <i class="fa fa-bell"></i>
-                                {% else %}
-                                    <i class="fa fa-bell-slash"></i>
-                                {% endif %}
-                            </a>
-                        </li>
-                        {% if request.user.has_space %}
-                            <li class="nav-item" style="margin-right: 10px;">
-                                <a class="nav-link" href="/space/product/create/">Product Create</a>
+                        {% if not request.user.is_authenticated %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="/account/signin/">Sign In</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/account/signup/">Sign Up</a>
                             </li>
                         {% else %}
-                            <li class="nav-item" style="margin-right: 10px;">
-                                <a class="nav-link" href="/space/create/">Space Create</a>
-                            </li>
-                        {% endif %}
-                    {% endif %}
-                    {% if request.user.is_authenticated %}
-                        <div class="nav-link btn-group">
-                            <div class="dropdown-toggle" data-toggle="dropdown" 
-                                style="cursor: pointer; color: white;"> 
-                                <img  src="{{request.user.thumbnail}}"
-                                onerror="this.src='https://i.postimg.cc/0N8mRzvP/user.png'" style="width: 25px; border-radius: 5px;">
-                            </div>
-                            <div class="dropdown-menu dropdown-menu-right" role="menu">
-                                <a class="list-group-item list-group-item-action" href="/account/">
-                                    {{ request.user.name }}
+                            <li class="nav-item">
+                                <a class="nav-link" href="/notification/">Notification
+                                    {% if request.user.has_notification %}
+                                        <i class="fa fa-bell"></i>
+                                    {% else %}
+                                        <i class="fa fa-bell-slash"></i>
+                                    {% endif %}
                                 </a>
-                                <a class="list-group-item list-group-item-action" href="/account/signout/">Signout</a>
+                            </li>
+                            {% if request.user.has_space %}
+                                <li class="nav-item" style="margin-right: 10px;">
+                                    <a class="nav-link" href="/space/product/create/">Product Create</a>
+                                </li>
+                            {% else %}
+                                <li class="nav-item" style="margin-right: 10px;">
+                                    <a class="nav-link" href="/space/create/">Space Create</a>
+                                </li>
+                            {% endif %}
+                        {% endif %}
+                        {% if request.user.is_authenticated %}
+                            <div class="nav-link btn-group">
+                                <div class="dropdown-toggle" data-toggle="dropdown" 
+                                    style="cursor: pointer; color: white;"> 
+                                    <img  src="{{request.user.thumbnail}}"
+                                    onerror="this.src='https://i.postimg.cc/0N8mRzvP/user.png'" style="width: 25px; border-radius: 5px;">
+                                </div>
+                                <div class="dropdown-menu dropdown-menu-right" role="menu">
+                                    <a class="list-group-item list-group-item-action" href="/account/">
+                                        {{ request.user.name }}
+                                    </a>
+                                    <a class="list-group-item list-group-item-action" href="/account/signout/">Signout</a>
+                                </div>
                             </div>
-                        </div>
-                    {% endif %}
-                </ul>
-            </div>    
-        </nav>
-    </div>
-    <div class="extra_contents">
+                        {% endif %}
+                    </ul>
+                </div>    
+            </nav>
+        </div>
         {% block extra_content %}
 
 
@@ -92,6 +92,10 @@
 
 
     <!-- footer -->
+
+    <div class="footer-block">
+        <h4>Sakkhat</h4>
+    </div>
 
 	<!-- JQuery , Popper and Bootstrap Library -->
 	<script type="text/javascript" src="{% static 'lib/js/jquery.min.js' %}"></script>
