--- a/templates/space/product/single.html
+++ b/templates/space/product/single.html
@@ -89,11 +89,11 @@
                 <br>
                 <div class="product-slick-container">
                     {% for product in related_products %}
-                        <figure class="card-container">
+                        <figure class="slider-card-container">
                             <img src="{{product.logo_url}}">
                             <figcaption>
                                 <h5 class="title">{{product.title}}</h5>
-                                <h6>{{product.title}}</h6>
+                                <h6>{{product.price}} TK</h6>
                                 <div>
                                     <button class="react-btn">
                                         <i class="em em---1"></i>
