--- a/static/css/generic/slider-card.css
+++ b/static/css/generic/slider-card.css
@@ -1,4 +1,4 @@
-.card-container {
+.slider-card-container {
 	/*use custom font here*/
 	position: relative; display: inline-block; overflow: hidden;
 	min-width: 280px; max-width: 300px; width: 100%; height: 320px;
@@ -7,16 +7,16 @@
 	box-shadow: 2px 2px 5px rgba(0,0,0,0.25);
 }
 
-.card-container * {
+.slider-card-container * {
 	-webkit-transition: all 0.35s;
 	transition: all 0.35s;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
-.card-container img {
+.slider-card-container img {
 	max-width: 100%; height: 100%; vertical-align: top;
-}.card-container figcaption {
+}.slider-card-container figcaption {
 	position: absolute; top: 0; left: 0; right: 0; border: 0;
 	bottom: 0; padding: 20px; 
 	background-image: -webkit-linear-gradient(bottom,rgba(0,0,0,0.8) 
@@ -27,20 +27,20 @@
 	display: flex; flex-direction: column; 
 	justify-content: flex-end;
 }
-.card-container h5 {
+.slider-card-container h5 {
 	font-size: 25px; font-weight: 300; line-height: 1;
 	letter-spacing: 1px; text-transform: uppercase;
 	margin: 3px 0px;
 }
-.card-container .title {
+.slider-card-container .title {
 	color: #fff; font-weight: 300;
 }
 
-.card-container a {
+.slider-card-container a {
 	position: absolute; top: 0; bottom: 0; left: 0; right: 0;
 }
 
-.card-container:hover img{
+.slider-card-container:hover img{
 	-webkit-transform: scale(1.2);
 	transform: scale(1.2);
 }
