--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,12 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/#trending">Trending <i class="fa fa-line-chart"></i></a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">All Spaces</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">All Products</a>
+                        </li>
                         {% if not request.user.is_authenticated %}
                             <li class="nav-item">
                                 <a class="nav-link" href="/account/signin/">Sign In</a>
