--- a/templates/base.html
+++ b/templates/base.html
@@ -36,13 +36,13 @@
                     </form>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/#trending">Trending <i class="fa fa-line-chart"></i></a>
+                            <a class="nav-link" href="/trending/">Trending <i class="fa fa-line-chart"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">All Spaces</a>
+                            <a class="nav-link" href="/space/all/">All Spaces</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">All Products</a>
+                            <a class="nav-link" href="/space/product/all/">All Products</a>
                         </li>
                         {% if not request.user.is_authenticated %}
                             <li class="nav-item">
@@ -55,21 +55,12 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="/notification/">Notification
                                     {% if request.user.has_notification %}
-                                        <i class="fa fa-bell"></i>
+                                        <i class="fa fa-bell"><sup>*</sup></i>
                                     {% else %}
-                                        <i class="fa fa-bell-slash"></i>
+                                        <i class="fa fa-bell"></i>
                                     {% endif %}
                                 </a>
                             </li>
-                            {% if request.user.has_space %}
-                                <li class="nav-item" style="margin-right: 10px;">
-                                    <a class="nav-link" href="/space/product/create/">Product Create</a>
-                                </li>
-                            {% else %}
-                                <li class="nav-item" style="margin-right: 10px;">
-                                    <a class="nav-link" href="/space/create/">Space Create</a>
-                                </li>
-                            {% endif %}
                         {% endif %}
                         {% if request.user.is_authenticated %}
                             <div class="nav-link btn-group">
@@ -82,6 +73,15 @@
                                     <a class="list-group-item list-group-item-action" href="/account/">
                                         {{ request.user.name }}
                                     </a>
+                                    {% if request.user.has_space %}
+                                        <a class="list-group-item list-group-item-action" href="/space/product/create/">
+                                            Product Create
+                                        </a>
+                                    {% else %}
+                                        <a class="list-group-item list-group-item-action" href="/space/create/">
+                                            Space Create
+                                        </a>
+                                    {% endif %}
                                     <a class="list-group-item list-group-item-action" href="/account/signout/">Signout</a>
                                 </div>
                             </div>
