--- a/templates/account/manage/profile.html
+++ b/templates/account/manage/profile.html
@@ -64,7 +64,14 @@
                         </a>
                         <br><br>
                     </div>
+
+                {% else %}
+                    <a href="/space/create/" class="list-group-item list-group-item-action bg-success"
+                        style="color: white; text-align: center;">
+                        Create Space
+                    </a>
                 {% endif %}
+                
             </div>
             <div class="col-md-3">
                 <div class="list-group">
