--- a/templates/home/manage/index.html
+++ b/templates/home/manage/index.html
@@ -73,7 +73,7 @@
         <div class="row">
             <div class="col-md-3">
                 <div class="list-group">
-                    <a class="list-group-item list-group-item-action bg-danger text-white" href="/trending/">
+                    <a class="list-group-item list-group-item-action bg-info text-white" href="/trending/">
                         Trending Spaces
                     </a>
                     {% for item in trending_status %}
@@ -86,7 +86,7 @@
             </div>
             <div class="col-md-3">
                 <div class="list-group">
-                    <p class="list-group-item bg-success text-white">Most Good React</p>
+                    <p class="list-group-item bg-dark text-white">Most Good React</p>
                     {% for item in trending_status %}
                         <a href="/space/{{item.status.space.name}}/" class="list-group-item list-group-item-action">
                             {{item.status.space.name}}
@@ -97,7 +97,7 @@
             </div>
             <div class="col-md-3">
                 <div class="list-group">
-                    <p class="list-group-item bg-primary text-white">Most Favorite</p>
+                    <p class="list-group-item bg-dark text-white">Most Favorite</p>
                     {% for item in trending_status %}
                         <a href="/space/{{item.status.space.name}}/" class="list-group-item list-group-item-action">
                             {{item.status.space.name}}
@@ -108,7 +108,7 @@
             </div>
             <div class="col-md-3">
                 <div class="list-group">
-                    <p class="list-group-item bg-info text-white">Recently Join</p>
+                    <p class="list-group-item bg-dark text-white">Recently Join</p>
                     {% for item in trending_status %}
                         <a href="/space/{{item.status.space.name}}/" class="list-group-item list-group-item-action">
                             {{item.status.space.name}}
@@ -124,7 +124,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-3">
-                    <a class="list-group-item list-group-item-action text-white bg-success" href="/?filter=pinned-products">
+                    <a class="list-group-item list-group-item-action text-white bg-info" href="/?filter=pinned-products">
                         Pinned Products
                     </a>
                     <div class="product-slick-container">
@@ -163,7 +163,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <p class="list-group-item bg-primary text-white">Products you may like</p>
+                    <p class="list-group-item bg-dark text-white">Products you may like</p>
                     <div class="product-slick-container">
                         {% for product in related_products %}
                             <figure class="slider-card-container">
@@ -193,7 +193,7 @@
                 </div>
                 <div class="col-lg-3">
                     <div class="list-group">
-                        <a class="list-group-item list-group-item-action bg-success text-white" 
+                        <a class="list-group-item list-group-item-action bg-info text-white" 
                             href="/account/activity/?what=favorite-space-list">
                            Favourite Spaces
                         </a>
@@ -215,7 +215,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <p class="list-group-item list-group-item-action text-white bg-info">
+                <p class="list-group-item list-group-item-action text-white bg-dark">
                     Most Recent Products
                 </p>
                 <div class="product-slick-container">
